# LLM_from_scratch-

./: .gitignore  Untitled-1.ipynb  attention.ipynb  build-a-large-language-model-from-scratch.decoded.txt  build-a-large-language-model-from-scratch.md  build-a-large-language-model-from-scratch.raw-linear.txt  build-a-large-language-model-from-scratch.raw.txt  fine_tune_classification.ipynb  implement_gpt.ipynb  instruct_fine_tune.ipynb  pdf_to_markdown_text_only.py  pretraining.ipynb  pyproject.toml  testing.ipynb  train_xtra.ipynb  working_with_text_data.ipynb
